This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

06-Apr-2001 (Lars Duening)  (3.3.38)
    - (md5.c) Removed a compiler warning.
    - (closure.c, interpret.c, prolang.y) Bugfixes in the '...' code
         generation.
    - (interpret.c) Indexing beyond the bounds of a rvalue string 
         returns -1 as 'character' value.
    - (smalloc.c) On Darwin, we get the memory from the system only
        in multiples of 64 Bytes, which caused the creation of too-small
        large blocks. Fixed that.

05-Apr-2001 (Lars Duening)  (3.3.37)
    - (object.c) Removed an occasional crasher from restore_object()
        (reported by Freaky).
    - (func_spec, prolang.y, interpret.c) Reworked and completed the
        support for the '...' argument operator (f-990417-9).
    - (object.c) The error messages for save_object() and restore_object()
        also print the filename in question.

04-Apr-2001 (Lars Duening) 
    - (func_spec, prolang.y, interpret.c) Added experimental support
        for the '...' argument operator (flatten argument). It works
        for lfuns and probably simul_efuns and doesn't break existing
        code, but I have to rework it to handle efuns efficiently.
        One of the problems is the one pass nature of the LPC compiler,
        which allows to nest function calls into function call arguments.

04-Apr-2001 (Lars Duening)  (3.3.36)
    - (Makefiles) Corrected.
    - (efuns, md5) New efun md5_encrypt() (thanks, Gawain!)
    - (lex.c) An attempt to '(: ;} fun() {... :)' is now detected and
        rejected (reported by Daniel Fischer).

03-Apr-2001 (Lars Duening)  (3.3.35)
    - (lex) Corrected a bug in yesterday's change.
    - (doc/) Cleaned up the files a bit.
    - (erq, xerq) Fixed (hopefully) a type mismatch under Darwin.
    - (make_func, parser) Wrapped the parsers into a file defining 'lint'